# python-dotenv

./: .bumpversion.cfg  .coveragerc  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  dotenv.py  index.html  mkdocs.yml  objects.inv  py  pyproject.toml  requirements-docs.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  sitemap.xml  test.py  tests.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_ISSUE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: BUG_ISSUE.md  FEATURE_ISSUE.md
.github/workflows/: release.yml  test.yml
changelog/: index.html
contributing/: index.html
docs/: contributing.md  getting-started.md  index.md  license.md  reference.md
docs/guides/: advanced.md  cli.md  configuration.md  index.md  ipython.md
docs/reference/: api.md  cli.md  file-format.md  index.md
dotenv/: __init__.py  __main__.py  cli.py  compat.py  ipython.py  main.py  orm.py
license/: index.html
reference/: index.html
search/: search_index.json
src/dotenv/: __init__.py  cli.py  compat.py  ipython.py  main.py  parser.py  validator.py  variables.py  version.py
stubs/dotenv/: __init__.pyi  cli.pyi  ipython.pyi  main.pyi
tests/: conftest.py  fixtures.py  test_basic.py  test_cli.py  test_core.py  test_fifo_dotenv.py  test_ipython.py  test_is_interactive.py  test_lib.py  test_main.py  test_multiline.py  test_orm.py  test_parser.py  test_utils.py  test_variables.py  test_zip_imports.py  utils.py
