[bumpversion]
current_version = 0.13.0
commit = True
tag = True

[bumpversion:file:src/dotenv/version.py]


[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude = .tox,.git,docs,venv,.venv

[mypy]
ignore_missing_imports = true

[metadata]
description-file = README.rst

[tool:pytest]
testpaths = tests

[coverage:run]
source = dotenv

[coverage:paths]
source =
    src/dotenv
    .tox/*/lib/python*/site-packages/dotenv
    .tox/pypy*/site-packages/dotenv

[coverage:report]
show_missing = True
exclude_lines =
    if IS_TYPE_CHECKING:
    pragma: no cover
