[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[bumpversion:file:src/dotenv/version.py]

[flake8]
max-line-length = 120
exclude = .tox,.git,docs,venv,.venv,build

[mypy]
check_untyped_defs = true
ignore_missing_imports = true

[metadata]
description_file = README.md

[tool:pytest]
testpaths = tests

[coverage:run]
relative_files = True
source = dotenv

[coverage:paths]
source = 
	src/dotenv
	.tox/*/lib/python*/site-packages/dotenv
	.tox/pypy*/site-packages/dotenv

[coverage:report]
show_missing = True
include = */site-packages/dotenv/*
exclude_lines = 
	if IS_TYPE_CHECKING:
	pragma: no cover
